# DOCUMIND-SS-AGENTIC-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG_APPROACH.md  README.md  TECHNICAL_NOTE.md  alembic.ini  code.md  docker-compose.yml  entrypoint.sh  example.md  main.py  pyproject.toml  re-rank.md  requirements.txt  storage.md  verify_endpoint.py
alembic/: env.py
alembic/versions/: 27c65e8ac8e2_add_s3_columns_to_datasource.py  5c1ca64f955a_initial_tables.py
api/: base.py  decorator.py
api/routes/: auth.py  base_di.py  docs.py  documents.py  rag.py  vectorstore.py
api/utils/: types.py
app/: config.py  container.py  routes.py  utils.py
crud/: base.py  filter.py  types.py
database/: registry.py  session.py
database/models/: __init__.py  base_model.py  data_source.py  user.py  vectorstore.py  vs_index.py
docs/: RAG_REDIS_EMPTY_CONTENT_ISSUE.md  RERANKING.md  code.md  deployment.md  diagnosis.md  issue_analysis.md  urgent_fix.md
document/: api.py
document/document_loaders/: __init__.py  _html.py  base.py  csv_loader.py  errors.py  md.py  ms_docx.py  ms_excel.py  ms_pptx.py  pdf.py  text.py  utils.py
errors/: __init__.py  errors_handler.py  exceptions.py
frontend/: chat.html  documents.html  documents.js  script.js  styles.css
middleware/: dep.py
rag/: api.py  engine.py  prompts.py  schemas.py  tools.py
schemas/: generic.py  user.py
scripts/: check_rag_retrieval.py  init_db.py
services/: auth.py  pii_masker.py  redis_vectorstore.py  reranker.py  security.py  storage.py  user_service.py
utilities/: embeddings.py
(+4 files in other folders)
