[project]
name = "docu-mind"
version = "1.0.0"
description = "A multimodal retrieval augmented generation project for document chat and analysis"
readme = "README.md"
authors = [
    {name = "Gideon", email = "gideongyimah19@gmail.com"}
]

dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.39",
    "langchain-core==0.2.43",
    "langchain-openai==0.1.21",
    "langsmith>=0.1.147",
    "scalar-fastapi==1.3.0",
]
